<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/click_to_play"
        android:textColor="#0000ff"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_front"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/front"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/front" />

    <ImageView
        android:id="@+id/iv_stop"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/stop"
        app:layout_constraintStart_toEndOf="@+id/iv_front"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/stop" />

    <ImageView
        android:id="@+id/iv_play"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/play"
        app:layout_constraintStart_toEndOf="@+id/iv_stop"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/play" />

    <ImageView
        android:id="@+id/iv_pause"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/pause"
        app:layout_constraintStart_toEndOf="@+id/iv_play"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pause" />

    <ImageView
        android:id="@+id/iv_next"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/next"
        app:layout_constraintStart_toEndOf="@+id/iv_pause"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/next" />

    <ImageView
        android:id="@+id/iv_end"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/end"
        app:layout_constraintStart_toEndOf="@+id/iv_next"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/end" />

    <TextView
        android:id="@+id/tv_song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/music_list"
        android:textColor="#0000ff"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_front" />

    <ListView
        android:id="@+id/lv_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="170dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>